remove use of ems. not necessary to fix the vscrollbar bug in #2830.

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -235,7 +235,6 @@ a, img {
 
 #editor-holder {
     position: relative;
-    font-size: 12px;
     
     /* Placeholder shown when there is no editor open */
     #not-editor {
