--- a/src/styles/brackets_codemirror_override.less
+++ b/src/styles/brackets_codemirror_override.less
@@ -27,7 +27,7 @@
  */
 .CodeMirror pre {
     line-height: inherit;
-    padding: 0 1.2em;
+    padding: 0 @code-padding;
 }
 
 .CodeMirror-scroll {
