--- a/src/styles/brackets_theme_default.less
+++ b/src/styles/brackets_theme_default.less
@@ -113,8 +113,8 @@
     color: @content-color;
     // line-height must be specified in px not em because the code font and line number font sizes are different.
     // Sizing via em will cause the code and line numbers to misalign
-    line-height: 1.25em;
-    font-size: 1em;
+    line-height: 15px;
+    font-size: 12px;
     font-family: 'SourceCodePro', "ＭＳ ゴシック", "MS Gothic", monospace;
 }
 
